--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,8 @@
   "version": "1.0.0",
   "description": "Enhances vendor workflow table with DONE BY column, filtering, data copying, and row highlighting",
   "permissions": [
-    "activeTab"
+    "activeTab",
+    "storage"
   ],
   "host_permissions": [
     "https://powertrack3.aptaracorp.com/*",
@@ -26,6 +27,19 @@
       ],
       "run_at": "document_idle"
     }
-  ]
+  ],
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  },
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "icons/icon16.png",
+      "32": "icons/icon32.png",
+      "128": "icons/icon128.png"
+    }
+  }
 }
 
