Update manifest.json: change extension name and description

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "Vendor Workflow Enhancer",
+  "name": "Your Cute Stepsister Watching TV Alone",
   "version": "1.0.0",
-  "description": "Enhances vendor workflow table with DONE BY column, filtering, data copying, and row highlighting",
+  "description": "gwag hawk",
   "permissions": [
     "activeTab",
     "storage"
