--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "Your Cute Stepsister Watching TV Alone",
-  "version": "1.0.0",
-  "description": "gwag hawk",
+  "name": "Flowers",
+  "version": "1.1.0",
+  "description": "Flowers for you",
   "permissions": [
     "activeTab",
     "storage"
@@ -29,16 +29,20 @@
     }
   ],
   "icons": {
-    "16": "icons/icon16.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
+    "16": "icons/logo-16.png",
+    "32": "icons/logo-32.png",
+    "34": "icons/logo-34.png",
+    "48": "icons/logo-48.png",
+    "128": "icons/logo-128.png"
   },
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
-      "16": "icons/icon16.png",
-      "32": "icons/icon32.png",
-      "128": "icons/icon128.png"
+      "16": "icons/logo-16.png",
+      "32": "icons/logo-32.png",
+      "34": "icons/logo-34.png",
+      "48": "icons/logo-48.png",
+      "128": "icons/logo-128.png"
     }
   }
 }
