Add API response handling, enhance data fetching with error checks, and implement new toast notifications for user feedback. Introduce past due file management and stats display functionality. Update manifest.json to include new modules.

--- a/manifest.json
+++ b/manifest.json
@@ -23,6 +23,9 @@
         "tableManager.js",
         "filterManager.js",
         "copyManager.js",
+        "toastManager.js",
+        "statsManager.js",
+        "pastDueManager.js",
         "content.js"
       ],
       "run_at": "document_idle"
