Add header and sorting functionality: Introduce HeaderBuilder and SortManager modules for dynamic table header creation and column sorting. Update manifest.json to include new files. Enhance tableManager to integrate new features.

--- a/manifest.json
+++ b/manifest.json
@@ -21,6 +21,8 @@
       "js": [
         "src/utils/utils.js",
         "src/services/apiService.js",
+        "src/lib/sortManager.js",
+        "src/lib/headerBuilder.js",
         "src/managers/tableManager.js",
         "src/managers/filterManager.js",
         "src/managers/copyManager.js",
